[JSC] fix error message for eval/arguments CoverInitializedName in strict code https://bugs.webkit.org/show_bug.cgi?id=152304

Patch by Caitlin Potter <caitp@igalia.com> on 2015-12-16
Reviewed by Darin Adler.

Because the error was originally classified as indicating a Pattern, the
error in AssignmentPattern parsing causes the reported message to revert to
the original Expression error message, which in this case is incorrect.

This change modifies the implementation of the strict code
error slightly, and reclassifies the error to prevent the message revert,
which improves the clarity of the message overall.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseAssignmentElement):
(JSC::Parser<LexerType>::parseDestructuringPattern):
* parser/Parser.h:
(JSC::Parser::ExpressionErrorClassifier::reclassifyExpressionError):
(JSC::Parser::reclassifyExpressionError):
* tests/stress/destructuring-assignment-syntax.js:

Canonical link: https://commits.webkit.org/170457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194153 268f45cc-cd09-0410-ab3c-d52691b4dbfc